--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,7 +32,7 @@ spring:
       indent-output: true
   data:
     mongodb:
-      uri: mongodb://mongo:13571113@197.13.10.237:27017/
+      uri: mongodb://localhost:27017/
       database: departdb
   mail:
     host: localhost
