--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -165,7 +165,7 @@ jhipster:
   #   allow-credentials: true
   #   max-age: 1800
   mail:
-    from: departdb@localhost
+    from: contact@fakroun.tn
   api-docs:
     default-include-pattern: ${server.servlet.context-path:}/api/**
     management-include-pattern: ${server.servlet.context-path:}/management/**
